--- a/css/font.css
+++ b/css/font.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?4q4j0u');
-	src:url('fonts/icomoon.eot?#iefix4q4j0u') format('embedded-opentype'),
-		url('fonts/icomoon.woff?4q4j0u') format('woff'),
-		url('fonts/icomoon.ttf?4q4j0u') format('truetype'),
-		url('fonts/icomoon.svg?4q4j0u#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?4q4j0u');
+	src:url('../fonts/icomoon.eot?#iefix4q4j0u') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?4q4j0u') format('woff'),
+		url('../fonts/icomoon.ttf?4q4j0u') format('truetype'),
+		url('../fonts/icomoon.svg?4q4j0u#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
